- FIX MDEV-6019 and MDEV-6021   Exhausted memory cause un-prepared long jump   Issue proper message when PIVOT column is nullable modified:   storage/connect/mysql-test/connect/r/pivot.result   storage/connect/mysql-test/connect/t/pivot.test   storage/connect/plgdbsem.h   storage/connect/tabpivot.cpp

- Prepare adding index_prev (not used yet)
modified:
  storage/connect/plgdbsem.h
  storage/connect/xindex.cpp
  storage/connect/xindex.h