storage/connect/xindex.h
@@ -198,6 +198,7 @@ class DllExport XXBASE : public CSORT, public BLOCK {
   virtual int  MaxRange(void) {return 1;}
   virtual int  Fetch(PGLOBAL g) = 0;
   virtual bool NextVal(bool eq) {return true;}
+  virtual bool PrevVal(void) {return true;}
   virtual int  FastFind(int nk) = 0;
   virtual bool Reorder(PGLOBAL g) {return true;}
   virtual int  Range(PGLOBAL g, int limit = 0, bool incl = true)
@@ -209,22 +210,22 @@ class DllExport XXBASE : public CSORT, public BLOCK {
  protected:
   // Members
   PTDBASE Tbxp;             // Points to calling table TDB
-  PXCOL    To_KeyCol;        // To KeyCol class list
+  PXCOL   To_KeyCol;        // To KeyCol class list
   MBLOCK  Record;           // Record allocation block
   int*   &To_Rec;           // We are using ftell, fseek
   int     Cur_K;            // Index of current record
   int     Old_K;            // Index of last record
   int     Num_K;            // Size of Rec_K pointer array
-  int     Ndif;              // Number of distinct values
+  int     Ndif;             // Number of distinct values
   int     Bot;              // Bottom of research index
   int     Top;              // Top    of research index
   int     Inf, Sup;         // Used for block optimization
-  OPVAL   Op;                // Search operator
+  OPVAL   Op;               // Search operator
   bool    Mul;              // true if multiple
   bool    Srtd;             // true for sorted column
   int     Val_K;            // Index of current value
-  int     Nblk;              // Number of blocks
-  int     Sblk;              // Block size
+  int     Nblk;             // Number of blocks
+  int     Sblk;             // Block size
   int     Thresh;           // Thresh for sorting join indexes
   int     ID;               // Index ID number
   int     Nth;              // Nth constant to fetch
@@ -263,6 +264,7 @@ class DllExport XINDEX : public XXBASE {
   virtual int  ColMaxSame(PXCOL kp);
   virtual void Close(void);
   virtual bool NextVal(bool eq);
+  virtual bool PrevVal(void);
   virtual bool Make(PGLOBAL g, PIXDEF sxp);
   virtual bool SaveIndex(PGLOBAL g, PIXDEF sxp);
   virtual bool Reorder(PGLOBAL g);
@@ -302,6 +304,7 @@ class DllExport XINDXS : public XINDEX {
   virtual int  Fetch(PGLOBAL g);
   virtual int  FastFind(int nk);
   virtual bool NextVal(bool eq);
+  virtual bool PrevVal(void);
   virtual int  Range(PGLOBAL g, int limit = 0, bool incl = true);
   virtual int  GroupSize(void);
 
